--- a/ansible/inventories/vagrant/group_vars/all/apps/logging-kibana.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/logging-kibana.yml
@@ -1,5 +1,5 @@
 ---
 kibana_elasticsearch_user: kibana
-kibana_elasticsearch_password: password
+kibana_elasticsearch_password: Passw0rd
 
 kibana_export_saved_output_dir: "/opt/provision/kibana_saved_objects"
