--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -41,3 +41,4 @@
     - { role: logging-elasticsearch,            tags: kubernetes-app-logging-elasticsearch,            when: elasticsearch_enabled | bool }
     - { role: logging-fluentbit,                tags: kubernetes-app-logging-fluentbit,                when: fluentbit_enabled | bool }
     - { role: logging-fluentd,                  tags: kubernetes-app-logging-fluentd,                  when: fluentd_enabled | bool }
+    - { role: logging-kibana,                   tags: kubernetes-app-logging-kibana,                   when: kibana_enabled | bool }
