--- a/apps/base/logging-kibana/deploy/secret/opensearch_dashboards.yml
+++ b/apps/base/logging-kibana/deploy/secret/opensearch_dashboards.yml
@@ -17,15 +17,9 @@ server.host: '0.0.0.0'
 # Use the `server.rewriteBasePath` setting to tell OpenSearch Dashboards if it should remove the basePath
 # from requests it receives, and to prevent a deprecation warning at startup.
 # This setting cannot end in a slash.
-{% if kibana.context_root != "" %}
-server.basePath: "{{ kibana.context_root }}"
-{% endif %}
 
 # Specifies whether OpenSearch Dashboards should rewrite requests that are prefixed with
 # `server.basePath` or require that they are rewritten by your reverse proxy.
-{% if kibana.context_root != "" %}
-server.rewriteBasePath: true
-{% endif %}
 
 # The maximum payload size in bytes for incoming server requests.
 # server.maxPayloadBytes: 1048576
@@ -38,7 +32,7 @@ opensearch.hosts: [ "https://elasticsearch.logging-elasticsearch.svc.cluster.loc
 
 # OpenSearch Dashboards uses an index in OpenSearch to store saved searches, visualizations and
 # dashboards. OpenSearch Dashboards creates a new index if the index doesn't already exist.
-opensearchDashboards.index: "{{ kibana.elasticsearch.index }}"
+opensearchDashboards.index: ".kibana"
 
 # The default application to load.
 # opensearchDashboards.defaultAppId: "home"
@@ -57,8 +51,8 @@ opensearchDashboards.index: "{{ kibana.elasticsearch.index }}"
 # the username and password that the OpenSearch Dashboards server uses to perform maintenance on the OpenSearch Dashboards
 # index at startup. Your OpenSearch Dashboards users still need to authenticate with OpenSearch, which
 # is proxied through the OpenSearch Dashboards server.
-opensearch.username: {{ kibana.elasticsearch.user }}
-opensearch.password: {{ kibana.elasticsearch.password }}
+opensearch.username: kibana
+opensearch.password: changeme
 
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the OpenSearch Dashboards server to the browser.
@@ -177,14 +171,6 @@ opensearch.ssl.verificationMode: full
 # for your map rendering services.
 # map.showRegionBlockedWarning: false%
 
-{% if kibana.multitenancy.enabled %}
-opensearch_security.multitenancy.enabled: true
-opensearch_security.multitenancy.tenants.enable_global: true
-opensearch_security.multitenancy.tenants.enable_private: true
-opensearch_security.multitenancy.tenants.preferred: ["Private", "Global"]
-opensearch_security.multitenancy.enable_filter: false
-{% else %}
 opensearch_security.multitenancy.enabled: false
-{% endif %}
 
 opensearch_security.readonly_mode.roles: [kibana_read_only]
