--- a/apps/base/stream-airsonic/deploy/secret/airsonic.delta.properties
+++ b/apps/base/stream-airsonic/deploy/secret/airsonic.delta.properties
@@ -1,4 +1,3 @@
-
 # Cf https://airsonic.github.io/docs/configure/airsonic-properties/
 
 # The airsonic.properties file contains both technical settings (LDAP, SMTP ...) and the state of the application (JWTKey, statistics ...).
@@ -8,15 +7,15 @@
 # Any other property set here will be ignored.
 
 LdapEnabled=true
-LdapUrl=ldaps://{{ airsonic.ldap.servername }}/{{ airsonic.ldap.users_dn }}
-LdapSearchFilter=(&(cn={0})(memberOf={{ airsonic.ldap.group }}))
-LdapManagerDn={{ airsonic.ldap.manager_dn }}
-LdapManagerPassword={{ airsonic.ldap.manager_password | hexlify }}
+LdapUrl=ldaps://openldap.auth-openldap.svc.cluster.local/ou=users,dc=ldap,dc=domain
+LdapSearchFilter=(&(cn={0})(memberOf=cn=airsonic,ou=app_groups,dc=ldap,dc=domain))
+LdapManagerDn=cn=readonly,dc=ldap,dc=domain
+LdapManagerPassword=changeme
 LdapAutoShadowing=true
 
-SmtpServer={{ airsonic.smtp.host }}
-SmtpEncryption={{ airsonic.smtp.encryption }}
-SmtpPort={{ airsonic.smtp.port }}
-SmtpUser={{ airsonic.smtp.user }}
-SmtpFrom={{ airsonic.smtp.from }}
-SmtpPassword={{ airsonic.smtp.password | hexlify }}
+SmtpServer=zonemta.infra-zonemta.svc.cluster.local
+SmtpEncryption=STARTTLS
+SmtpPort=587
+SmtpUser=smtp
+SmtpFrom=noreply@k8s.test
+SmtpPassword=changeme
