Migrate stream-jellyfin to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -43,3 +43,4 @@
     - { role: logging-fluentd,                  tags: kubernetes-app-logging-fluentd,                  when: fluentd_enabled | bool }
     - { role: logging-kibana,                   tags: kubernetes-app-logging-kibana,                   when: kibana_enabled | bool }
     - { role: stream-airsonic,                  tags: kubernetes-app-stream-airsonic,                  when: airsonic_enabled | bool }
+    - { role: stream-jellyfin,                  tags: kubernetes-app-stream-jellyfin,                  when: jellyfin_enabled | bool }
