--- a/apps/base/stream-jellyfin/deploy/ingress.yaml
+++ b/apps/base/stream-jellyfin/deploy/ingress.yaml
@@ -2,10 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: jellyfin
-  namespace: {{ jellyfin.namespace }}
-  labels:
-    {{ jellyfin.labels_def | to_nice_yaml() | indent(4) }}
-    {{ jellyfin.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Stream
@@ -13,23 +9,21 @@ metadata:
     gethomepage.dev/description: Media streaming
     gethomepage.dev/icon: jellyfin
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=jellyfin"
-{% if homepage.config.jellyfin.enabled %}
     # https://gethomepage.dev/en/services/jellyfin/
     gethomepage.dev/widget.type: "jellyfin"
     gethomepage.dev/widget.url: "http://jellyfin.stream-jellyfin.svc.cluster.local"
-    gethomepage.dev/widget.key: "{{ homepage.config.jellyfin.apikey }}"
-{% endif %}
+    gethomepage.dev/widget.key: "changeme"
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - jellyfin.stream.intra.{{ web_base_domain }}
+      - jellyfin.stream.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: jellyfin.stream.intra.{{ web_base_domain }}
+  - host: jellyfin.stream.intra.web_domain_name
     http:
       paths:
-      - path: {{ '/' if jellyfin.context_root == '' else jellyfin.context_root }}
+      - path: /
         pathType: Prefix
         backend:
           service:
