--- a/apps/base/stream-jellyfin/deploy/networkPolicy.yaml
+++ b/apps/base/stream-jellyfin/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-jellyfin
-  namespace: {{ jellyfin.namespace }}
-  labels:
-    {{ jellyfin.labels_def | to_nice_yaml() | indent(4) }}
-    {{ jellyfin.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ jellyfin.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: jellyfin
+      app.kubernetes.io/component: jellyfin
 
   ingress:
     # Allow from the ingress controller
@@ -20,20 +17,19 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
-{% if homepage.config.jellyfin.enabled %}
     # Allow http from the homepage (to enable the widget)
     - ports:
         - port: jellyfin
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ homepage.namespace }}
+              kubernetes.io/metadata.name: tool-homepage
           podSelector:
             matchLabels:
-              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
-{% endif %}
+              app.kubernetes.io/name: homepage
+              app.kubernetes.io/component: homepage
