--- a/apps/base/stream-jellyfin/deploy/statefulSet.yaml
+++ b/apps/base/stream-jellyfin/deploy/statefulSet.yaml
@@ -2,27 +2,24 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: jellyfin
-  namespace: {{ jellyfin.namespace }}
-  labels:
-    {{ jellyfin.labels_def | to_nice_yaml() | indent(4) }}
-    {{ jellyfin.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      {{ jellyfin.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: jellyfin
+      app.kubernetes.io/component: jellyfin
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ jellyfin.labels_def | to_nice_yaml() | indent(8) }}
-        {{ jellyfin.labels_desc | to_nice_yaml() | indent(8) }}
+        app.kubernetes.io/name: jellyfin
+        app.kubernetes.io/component: jellyfin
     spec:
       initContainers:
       - name: create-folders
-        image: "{{ busybox.private_image | image_full_name }}"
+        image: "registry.lan/jellyfin-busybox:1.36.0"
         imagePullPolicy: Always
         command:
           - "sh"
@@ -31,19 +28,19 @@ spec:
             mkdir -p /jellyfin/config
             chown 1000:1000 /jellyfin/config
         volumeMounts:
-        - name: jellyfin-pv-claim
+        - name: jellyfin-data
           mountPath: /jellyfin
       - name: inject-conf
-        image: "{{ jellyfin.conf_injection_private_image | image_full_name }}"
+        image: "registry.lan/jellyfin-conf-injection:3.11.1-alpine3.17"
         imagePullPolicy: Always
         volumeMounts:
-        - name: jellyfin-config
+        - name: jellyfin-inject-config
           mountPath: /config-source
-        - name: jellyfin-pv-claim
+        - name: jellyfin-data
           mountPath: /config-target
           subPath: config
       - name: inject-certificate
-        image: "{{ jellyfin.conf_injection_private_image | image_full_name }}"
+        image: "registry.lan/jellyfin-conf-injection:3.11.1-alpine3.17"
         imagePullPolicy: Always
         command:
           - "sh"
@@ -58,8 +55,8 @@ spec:
         - name: tmp-cert-volume
           mountPath: /tmp-cert
       containers:
-      - image: "{{ jellyfin.private_image | image_full_name }}"
-        name: jellyfin
+      - name: jellyfin
+        image: "registry.lan/jellyfin:10.8.9-amd64-custom"
         ports:
         - containerPort: 8096
           name: jellyfin
@@ -70,24 +67,23 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: {{ '/' if jellyfin.context_root == '' else jellyfin.context_root }}
+            path: /
             port: jellyfin
           initialDelaySeconds: 3
           periodSeconds: 5
         resources:
           requests:
-            cpu: "{{ jellyfin.container.requests_cpu }}"
-            memory: "{{ jellyfin.container.requests_memory }}"
+            cpu: 250m
+            memory: 512Mi
           limits:
-            cpu: "{{ jellyfin.container.limits_cpu }}"
-            memory: "{{ jellyfin.container.limits_memory }}"
-{% if jellyfin.container.limits_gpu %}
-            {{ jellyfin.container.limits_gpu | to_nice_yaml() | indent(12) }}
-{% endif %}
+            cpu: "1"
+            memory: 512Mi
+            # To use a gpu limit
+            #gpu.intel.com/i915: 1
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
-        - name: jellyfin-pv-claim
+        - name: jellyfin-data
           mountPath: /config
           subPath: config
         - name: tmp-cache-volume
@@ -105,9 +101,12 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
-      - name: jellyfin-config
-        configMap:
-          name: jellyfin-config
+      - name: jellyfin-data
+        persistentVolumeClaim:
+          claimName: jellyfin-data
+      - name: jellyfin-inject-config
+        secret:
+          secretName: jellyfin-inject-config
       - name: jellyfin-multimedia
         persistentVolumeClaim:
           claimName: nfs-multimedia
@@ -126,12 +125,3 @@ spec:
       - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
-  volumeClaimTemplates:
-  - metadata:
-      name: jellyfin-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_longhorn_high_durability_storage_class_name }}
-      resources:
-        requests:
-          storage: {{ jellyfin.container.storage.data }}
