--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -44,3 +44,4 @@
     - { role: logging-kibana,                   tags: kubernetes-app-logging-kibana,                   when: kibana_enabled | bool }
     - { role: stream-airsonic,                  tags: kubernetes-app-stream-airsonic,                  when: airsonic_enabled | bool }
     - { role: stream-jellyfin,                  tags: kubernetes-app-stream-jellyfin,                  when: jellyfin_enabled | bool }
+    - { role: tool-homepage,                    tags: kubernetes-app-tool-homepage,                    when: homepage_enabled | bool }
