--- a/apps/base/tool-homepage/deploy/rbac.yaml
+++ b/apps/base/tool-homepage/deploy/rbac.yaml
@@ -2,10 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: homepage
-  namespace: {{ homepage.namespace }}
-  labels:
-    {{ homepage.labels_def | to_nice_yaml() | indent(4) }}
-    {{ homepage.labels_desc | to_nice_yaml() | indent(4) }}
 secrets:
   - name: homepage
 
@@ -16,10 +12,6 @@ kind: Secret
 type: kubernetes.io/service-account-token
 metadata:
   name: homepage
-  namespace: {{ homepage.namespace }}
-  labels:
-    {{ homepage.labels_def | to_nice_yaml() | indent(4) }}
-    {{ homepage.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     kubernetes.io/service-account.name: homepage
 
@@ -29,9 +21,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: homepage
-  labels:
-    {{ homepage.labels_def | to_nice_yaml() | indent(4) }}
-    {{ homepage.labels_desc | to_nice_yaml() | indent(4) }}
 rules:
   - apiGroups:
       - ""
@@ -65,9 +54,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: homepage
-  labels:
-    {{ homepage.labels_def | to_nice_yaml() | indent(4) }}
-    {{ homepage.labels_desc | to_nice_yaml() | indent(4) }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -75,4 +61,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: homepage
-    namespace: {{ homepage.namespace }}
+    namespace: tool-homepage
