--- a/apps/base/tool-homepage/deploy/secret/settings.yaml
+++ b/apps/base/tool-homepage/deploy/secret/settings.yaml
@@ -1,7 +1,7 @@
 ---
-title: {{ homepage.config.title }}
+title: Homeserver, on Vagrant
 
-base: https://homepage.tool.{{ web_base_domain }}
+base: https://homepage.tool.web_domain_name
 
 target: _blank
 
@@ -24,9 +24,6 @@ layout:
     icon: mdi-download
   Stream:
     icon: mdi-stream
-{% if homepage.config.external_categories.keys() | length > 0 %}
-  {{ homepage.config.external_categories | to_nice_yaml() | indent(2) }}
-{% endif %}
 
 providers:
   longhorn:
