Migrate tool-nextcloud to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -46,3 +46,4 @@
     - { role: stream-jellyfin,                  tags: kubernetes-app-stream-jellyfin,                  when: jellyfin_enabled | bool }
     - { role: tool-homepage,                    tags: kubernetes-app-tool-homepage,                    when: homepage_enabled | bool }
     - { role: tool-miniflux,                    tags: kubernetes-app-tool-miniflux,                    when: miniflux_enabled | bool }
+    - { role: tool-nextcloud,                   tags: kubernetes-app-tool-nextcloud,                   when: nextcloud_enabled | bool }
