Migrate tool-paperless to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -48,3 +48,4 @@
     - { role: tool-miniflux,                    tags: kubernetes-app-tool-miniflux,                    when: miniflux_enabled | bool }
     - { role: tool-nextcloud,                   tags: kubernetes-app-tool-nextcloud,                   when: nextcloud_enabled | bool }
     - { role: tool-olivetin,                    tags: kubernetes-app-tool-olivetin,                    when: olivetin_enabled | bool }
+    - { role: tool-paperless,                   tags: kubernetes-app-tool-paperless,                   when: paperless_enabled | bool }
