--- a/ansible/install_applications_new/roles/monitoring-apcups-exporter/meta/main.yml
+++ b/ansible/install_applications_new/roles/monitoring-apcups-exporter/meta/main.yml
@@ -2,10 +2,13 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Install and configure apcupsd"
+  description: "Deploy application monitoring-apcups-exporter"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
       versions:
         - stretch
         - buster
+
+dependencies:
+  - { role: app_base }
